crates/pg_syntax/tests/snapshots/postgres_regress/json@437.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select to_tsvector('[]'::json);"
---
SelectStmt@0..31
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..18 "to_tsvector"
      Ascii40@18..19 "("
      TypeCast@19..29
        AConst@19..23
          Sconst@19..23 "'[]'"
        Typecast@23..25 "::"
        TypeName@25..29
          Ident@25..29 "json"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

