crates/pg_syntax/tests/snapshots/postgres_regress/json@438.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select to_tsvector('null'::json);"
---
SelectStmt@0..33
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..31
    FuncCall@7..31
      Ident@7..18 "to_tsvector"
      Ascii40@18..19 "("
      TypeCast@19..31
        AConst@19..25
          Sconst@19..25 "'null'"
        Typecast@25..27 "::"
        TypeName@27..31
          Ident@27..31 "json"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

